--- a/src/main/resources/regression/ciral-v1.0-ha-en.yaml
+++ b/src/main/resources/regression/ciral-v1.0-ha-en.yaml
@@ -1,16 +1,16 @@
 ---
-corpus: ciral-hausa
-corpus_path: collections/ciral/ciral-passages-hausa/
+corpus: ciral-hausa-english
+corpus_path: collections/ciral/ciral-passages-hausa-english/
 
-index_path: indexes/lucene-index.ciral-v1.0-ha/
+index_path: indexes/lucene-index.ciral-v1.0-ha-en/
 collection_class: MrTyDiCollection
 generator_class: DefaultLuceneDocumentGenerator
 index_threads: 16
-index_options: -storePositions -storeDocvectors -storeRaw -language ha
+index_options: -storePositions -storeDocvectors -storeRaw
 index_stats:
   documents: 715355
   documents (non-empty): 715355
-  total terms: 93696543
+  total terms: 55768945
 
 metrics:
   - metric: nDCG@20
@@ -32,27 +32,27 @@ topic_reader: TsvInt
 topics:
   - name: "[CIRAL Hausa: Test Set A (Shallow Judgements)](https://huggingface.co/datasets/CIRAL/ciral)"
     id: test-a-shallow
-    path: topics.ciral-v1.0-ha-test-a-native.tsv
+    path: topics.ciral-v1.0-ha-test-a.tsv
     qrel: qrels.ciral-v1.0-ha-test-a.tsv
   - name: "[CIRAL Hausa: Test Set A (Pools)](https://huggingface.co/datasets/CIRAL/ciral)"
     id: test-a-pools
-    path: topics.ciral-v1.0-ha-test-a-native.tsv
+    path: topics.ciral-v1.0-ha-test-a.tsv
     qrel: qrels.ciral-v1.0-ha-test-a-pools.tsv
   - name: "[CIRAL Hausa: Test Set B](https://huggingface.co/datasets/CIRAL/ciral)"
     id: test-b-shallow
-    path: topics.ciral-v1.0-ha-test-b-native.tsv
+    path: topics.ciral-v1.0-ha-test-b.tsv
     qrel: qrels.ciral-v1.0-ha-test-b.tsv
 
 models:
   - name: bm25-default
     display: BM25 (default)
-    params: -bm25 -hits 1000 -language ha
+    params: -bm25 -hits 1000
     results:
       nDCG@20:
-        - 0.1656
-        - 0.1161
-        - 0.2121
+        - 0.1619
+        - 0.2142
+        - 0.2124
       R@100:
-        - 0.2874
-        - 0.1916
-        - 0.3800
+        - 0.4099
+        - 0.4039
+        - 0.4394
