--- a/src/main/resources/regression/ciral-v1.0-so-en.yaml
+++ b/src/main/resources/regression/ciral-v1.0-so-en.yaml
@@ -1,16 +1,16 @@
 ---
-corpus: ciral-somali
-corpus_path: collections/ciral/ciral-passages-somali/
+corpus: ciral-somali-english
+corpus_path: collections/ciral/ciral-passages-somali-english/
 
-index_path: indexes/lucene-index.ciral-v1.0-so/
+index_path: indexes/lucene-index.ciral-v1.0-so-en/
 collection_class: MrTyDiCollection
 generator_class: DefaultLuceneDocumentGenerator
 index_threads: 16
-index_options: -storePositions -storeDocvectors -storeRaw -language so
+index_options: -storePositions -storeDocvectors -storeRaw
 index_stats:
   documents: 827552
   documents (non-empty): 827552
-  total terms: 103736362
+  total terms: 63835022
 
 metrics:
   - metric: nDCG@20
@@ -32,27 +32,27 @@ topic_reader: TsvInt
 topics:
   - name: "[CIRAL Somali: Test Set A (Shallow Judgements)](https://huggingface.co/datasets/CIRAL/ciral)"
     id: test-a-shallow
-    path: topics.ciral-v1.0-so-test-a-native.tsv
+    path: topics.ciral-v1.0-so-test-a.tsv
     qrel: qrels.ciral-v1.0-so-test-a.tsv
   - name: "[CIRAL Somali: Test Set A (Pools)](https://huggingface.co/datasets/CIRAL/ciral)"
     id: test-a-pools
-    path: topics.ciral-v1.0-so-test-a-native.tsv
+    path: topics.ciral-v1.0-so-test-a.tsv
     qrel: qrels.ciral-v1.0-so-test-a-pools.tsv
   - name: "[CIRAL Somali: Test Set B](https://huggingface.co/datasets/CIRAL/ciral)"
     id: test-b-shallow
-    path: topics.ciral-v1.0-so-test-b-native.tsv
+    path: topics.ciral-v1.0-so-test-b.tsv
     qrel: qrels.ciral-v1.0-so-test-b.tsv
 
 models:
   - name: bm25-default
     display: BM25 (default)
-    params: -bm25 -hits 1000 -language so
+    params: -bm25 -hits 1000
     results:
       nDCG@20:
-        - 0.1214
-        - 0.1232
-        - 0.1725
+        - 0.1590
+        - 0.2461
+        - 0.2186
       R@100:
-        - 0.2615
-        - 0.1923
-        - 0.3479
+        - 0.3904
+        - 0.4379
+        - 0.4637
