--- a/src/main/resources/regression/ciral-v1.0-yo-en.yaml
+++ b/src/main/resources/regression/ciral-v1.0-yo-en.yaml
@@ -1,16 +1,16 @@
 ---
-corpus: ciral-yoruba
-corpus_path: collections/ciral/ciral-passages-yoruba/
+corpus: ciral-yoruba-english
+corpus_path: collections/ciral/ciral-passages-yoruba-english/
 
-index_path: indexes/lucene-index.ciral-v1.0-yo/
+index_path: indexes/lucene-index.ciral-v1.0-yo-en/
 collection_class: MrTyDiCollection
 generator_class: DefaultLuceneDocumentGenerator
 index_threads: 16
-index_options: -storePositions -storeDocvectors -storeRaw -language yo
+index_options: -storePositions -storeDocvectors -storeRaw
 index_stats:
   documents: 82095
   documents (non-empty): 82095
-  total terms: 13693080
+  total terms: 7245155
 
 metrics:
   - metric: nDCG@20
@@ -32,27 +32,27 @@ topic_reader: TsvInt
 topics:
   - name: "[CIRAL Yoruba: Test Set A (Shallow Judgements)](https://huggingface.co/datasets/CIRAL/ciral)"
     id: test-a-shallow
-    path: topics.ciral-v1.0-yo-test-a-native.tsv
+    path: topics.ciral-v1.0-yo-test-a.tsv
     qrel: qrels.ciral-v1.0-yo-test-a.tsv
   - name: "[CIRAL Yoruba: Test Set A (Pools)](https://huggingface.co/datasets/CIRAL/ciral)"
     id: test-a-pools
-    path: topics.ciral-v1.0-yo-test-a-native.tsv
+    path: topics.ciral-v1.0-yo-test-a.tsv
     qrel: qrels.ciral-v1.0-yo-test-a-pools.tsv
   - name: "[CIRAL Yoruba: Test Set B](https://huggingface.co/datasets/CIRAL/ciral)"
     id: test-b-shallow
-    path: topics.ciral-v1.0-yo-test-b-native.tsv
+    path: topics.ciral-v1.0-yo-test-b.tsv
     qrel: qrels.ciral-v1.0-yo-test-b.tsv
 
 models:
   - name: bm25-default
     display: BM25 (default)
-    params: -bm25 -hits 1000 -language yo
+    params: -bm25 -hits 1000
     results:
       nDCG@20:
-        - 0.4023
-        - 0.3118
-        - 0.3459
+        - 0.4265
+        - 0.4451
+        - 0.3700
       R@100:
-        - 0.6659
-        - 0.4899
-        - 0.6434
+        - 0.7832
+        - 0.7199
+        - 0.7348
