--- a/src/main/resources/regression/dl19-passage-cohere-embed-english-v3.0-hnsw-int8.yaml
+++ b/src/main/resources/regression/dl19-passage-cohere-embed-english-v3.0-hnsw-int8.yaml
@@ -1,11 +1,11 @@
 ---
-corpus: msmarco-passage-cohere-embed-english-v3
-corpus_path: collections/msmarco/msmarco-passage-cohere-embed-english-v3/
+corpus: msmarco-passage-cohere-embed-english-v3.0
+corpus_path: collections/msmarco/msmarco-passage-cohere-embed-english-v3.0/
 
-download_url: https://rgw.cs.uwaterloo.ca/pyserini/data/msmarco-passage-cohere-embed-english-v3.tar
-download_checksum: 6b7d9795806891b227378f6c290464a9
+download_url: https://rgw.cs.uwaterloo.ca/pyserini/data/msmarco-passage-cohere-embed-english-v3.0.tar
+download_checksum: 06a6e38a0522850c6aa504db7b2617f5
 
-index_path: indexes/lucene-hnsw.msmarco-passage-cohere-embed-english-v3-int8/
+index_path: indexes/lucene-hnsw.msmarco-passage-cohere-embed-english-v3.0-int8/
 index_type: hnsw
 collection_class: JsonDenseVectorCollection
 generator_class: HnswDenseVectorDocumentGenerator 
@@ -13,30 +13,30 @@ index_threads: 16
 index_options: -M 16 -efC 100 -noMerge -quantize.int8
 
 metrics:
-  - metric: nDCG@10
-    command: target/appassembler/bin/trec_eval
-    params: -c -m ndcg_cut.10
-    separator: "\t"
-    parse_index: 2
-    metric_precision: 4
-    can_combine: false
   - metric: AP@1000
     command: target/appassembler/bin/trec_eval
-    params: -c -m map
+    params: -m map -c -l 2
     separator: "\t"
     parse_index: 2
     metric_precision: 4
     can_combine: false
-  - metric: RR@10
+  - metric: nDCG@10
     command: target/appassembler/bin/trec_eval
-    params: -c -M 10 -m recip_rank
+    params: -m ndcg_cut.10 -c
+    separator: "\t"
+    parse_index: 2
+    metric_precision: 4
+    can_combine: false
+  - metric: R@100
+    command: target/appassembler/bin/trec_eval
+    params: -m recall.100 -c -l 2
     separator: "\t"
     parse_index: 2
     metric_precision: 4
     can_combine: false
   - metric: R@1000
     command: target/appassembler/bin/trec_eval
-    params: -c -m recall.1000
+    params: -m recall.1000 -c -l 2
     separator: "\t"
     parse_index: 2
     metric_precision: 4
@@ -44,22 +44,22 @@ metrics:
 
 topic_reader: JsonIntVector
 topics:
-  - name: "[MS MARCO Passage: Dev](https://github.com/microsoft/MSMARCO-Passage-Ranking)"
-    id: dev
-    path: topics.msmarco-passage.dev-subset.cohere-embed-english-v3.jsonl.gz
-    qrel: qrels.msmarco-passage.dev-subset.txt
+  - name: "[DL19 (Passage)](https://trec.nist.gov/data/deep2020.html)"
+    id: dl19
+    path: topics.dl19-passage.cohere-embed-english-v3.0.jsonl.gz
+    qrel: qrels.dl19-passage.txt
 
 models:
-  - name: cohere-embed-english-v3
-    display: cohere-embed-english-v3
+  - name: cohere-embed-english-v3.0
+    display: cohere-embed-english-v3.0
     type: hnsw
     params: -generator VectorQueryGenerator -topicField vector -threads 16 -hits 1000 -efSearch 1000
     results:
-      nDCG@10:
-        - 0.427
       AP@1000:
-        - 0.371
-      RR@10:
-        - 0.365
+        - 0.487
+      nDCG@10:
+        - 0.690
+      R@100:
+        - 0.647
       R@1000:
-        - 0.974
+        - 0.850
