--- a/src/main/resources/regression/dl20-passage-cohere-embed-english-v3.0-hnsw.yaml
+++ b/src/main/resources/regression/dl20-passage-cohere-embed-english-v3.0-hnsw.yaml
@@ -1,16 +1,16 @@
 ---
-corpus: msmarco-passage-cohere-embed-english-v3
-corpus_path: collections/msmarco/msmarco-passage-cohere-embed-english-v3/
+corpus: msmarco-passage-cohere-embed-english-v3.0
+corpus_path: collections/msmarco/msmarco-passage-cohere-embed-english-v3.0/
 
-download_url: https://rgw.cs.uwaterloo.ca/pyserini/data/msmarco-passage-cohere-embed-english-v3.tar
-download_checksum: 6b7d9795806891b227378f6c290464a9
+download_url: https://rgw.cs.uwaterloo.ca/pyserini/data/msmarco-passage-cohere-embed-english-v3.0.tar
+download_checksum: 06a6e38a0522850c6aa504db7b2617f5
 
-index_path: indexes/lucene-hnsw.msmarco-passage-cohere-embed-english-v3-int8/
+index_path: indexes/lucene-hnsw.msmarco-passage-cohere-embed-english-v3.0/
 index_type: hnsw
 collection_class: JsonDenseVectorCollection
 generator_class: HnswDenseVectorDocumentGenerator 
 index_threads: 16
-index_options: -M 16 -efC 100 -noMerge -quantize.int8
+index_options: -M 16 -efC 100 -memoryBuffer 65536 -noMerge
 
 metrics:
   - metric: AP@1000
@@ -46,20 +46,20 @@ topic_reader: JsonIntVector
 topics:
   - name: "[DL20 (Passage)](https://trec.nist.gov/data/deep2020.html)"
     id: dl20
-    path: topics.dl20-passage.cohere-embed-english-v3.jsonl.gz
+    path: topics.dl20-passage.cohere-embed-english-v3.0.jsonl.gz
     qrel: qrels.dl20-passage.txt
 
 models:
-  - name: cohere-embed-english-v3
-    display: cohere-embed-english-v3
+  - name: cohere-embed-english-v3.0
+    display: cohere-embed-english-v3.0
     type: hnsw
     params: -generator VectorQueryGenerator -topicField vector -threads 16 -hits 1000 -efSearch 1000
     results:
       AP@1000:
         - 0.505
       nDCG@10:
-        - 0.722
+        - 0.725
       R@100:
-        - 0.720
+        - 0.724
       R@1000:
-        - 0.858
+        - 0.864
