--- a/src/main/resources/docgen/templates/msmarco-v2-doc-segmented-d2q-t5.template
+++ b/src/main/resources/docgen/templates/msmarco-v2-doc-segmented-d2q-t5.template
@@ -4,6 +4,7 @@
 
 This page describes regression experiments for document ranking _on the segmented version_ of the MS MARCO (V2) document corpus using the dev queries, which is integrated into Anserini's regression testing framework.
 Here, we expand the segmented document corpus with doc2query-T5.
+For additional instructions on working with MS MARCO V2 document collection, refer to [this page](${root_path}/docs/experiments-msmarco-v2.md).
 
 The exact configurations for these regressions are stored in [this YAML file](${yaml}).
 Note that this page is automatically generated from [this template](${template}) as part of Anserini's regression pipeline, so do not modify this page directly; modify the template instead.
