--- a/src/main/resources/docgen/templates/dl22-passage-augmented.template
+++ b/src/main/resources/docgen/templates/dl22-passage-augmented.template
@@ -2,8 +2,8 @@
 
 **Models**: various bag-of-words approaches on augmented passages
 
-This page describes baseline experiments, integrated into Anserini's regression testing framework, on the [TREC 2022 Deep Learning Track passage ranking task](https://trec.nist.gov/data/deep2022.html) using the _augmented version_ of the MS MARCO V2 Passage Corpus.
-For additional instructions on working with the MS MARCO V2 Passage Corpus, refer to [this page](${root_path}/docs/experiments-msmarco-v2.md).
+This page describes baseline experiments, integrated into Anserini's regression testing framework, on the [TREC 2022 Deep Learning Track passage ranking task](https://trec.nist.gov/data/deep2022.html) using the _augmented version_ of the MS MARCO V2 passage corpus.
+For additional instructions on working with the MS MARCO V2 passage corpus, refer to [this page](${root_path}/docs/experiments-msmarco-v2.md).
 
 Note that the NIST relevance judgments provide far more relevant passages per topic, unlike the "sparse" judgments provided by Microsoft (these are sometimes called "dense" judgments to emphasize this contrast).
 
