--- a/src/main/java/io/anserini/tcr/msmarco_html_row_v1.template
+++ b/src/main/java/io/anserini/tcr/msmarco_html_row_v1.template
@@ -1,18 +1,18 @@
 <!-- Condition: ${condition_name} -->
 <tr class="accordion-toggle collapsed" id="row${row_cnt}" data-toggle="collapse" data-parent="#row${row_cnt}" href="#collapse${row_cnt}">
 <td class="expand-button"></td>
-<td style="min-width: 85px">$row</td>
+<td style="min-width: 85px">${row}</td>
 <td style="min-width: 400px">${condition_name}</td>
-<td>$s1</td>
-<td>$s2</td>
-<td>$s3</td>
+<td>${s1}</td>
+<td>${s2}</td>
+<td>${s3}</td>
 <td></td>
-<td>$s4</td>
-<td>$s5</td>
-<td>$s6</td>
+<td>${s4}</td>
+<td>${s5}</td>
+<td>${s6}</td>
 <td></td>
-<td>$s7</td>
-<td>$s8</td>
+<td>${s7}</td>
+<td>${s8}</td>
 </tr>
 <tr class="hide-table-padding">
 <td></td>
@@ -39,7 +39,7 @@
 Command to generate run on TREC 2019 queries:
 
   <blockquote class="mycode">
-<pre><code>$cmd1
+<pre><code>${cmd1}
 </code></pre></blockquote>
 Evaluation commands:
 
@@ -52,7 +52,7 @@ Evaluation commands:
     Command to generate run on TREC 2020 queries:
 
   <blockquote class="mycode">
-<pre><code>$cmd2
+<pre><code>${cmd2}
 </code></pre></blockquote>
 Evaluation commands:
 
@@ -65,7 +65,7 @@ Evaluation commands:
     Command to generate run on dev queries:
 
   <blockquote class="mycode">
-<pre><code>$cmd3
+<pre><code>${cmd3}
 </code></pre></blockquote>
 Evaluation commands:
 
