--- a/src/main/java/io/anserini/tcr/msmarco_html_v1_passage.template
+++ b/src/main/java/io/anserini/tcr/msmarco_html_v1_passage.template
@@ -131,7 +131,7 @@ pre[class*="prettyprint"] {
           ">
         <div class="container d-flex align-items-center justify-content-center text-center h-100"  style="max-height: 150px">
           <div class="text-white">
-            <h1 class="mb-3">$title</h1>
+            <h1 class="mb-3">${title}</h1>
           </div>
         </div>
       </div>
@@ -173,64 +173,11 @@ Instructions for programmatic execution are shown at the bottom of this page (sc
     </thead>
     <tbody>
 
-$rows
+${rows}
 
     </tbody>
   </table>
 </div>
-
-<div style="padding-top: 20px"/>
-
-<h4>Programmatic Execution</h4>
-
-<p>All experimental runs shown in the above table can be programmatically executed based on the instructions below.
-To list all the experimental conditions:</p>
-
-<blockquote class="mycode2"><tt>
-python 2cr/msmarco.py --collection v1-passage --list-conditions
-</tt></blockquote>
-
-<p>These conditions correspond to the table rows above.</p>
-
-<p>For all conditions, just show the commands in a "dry run":</p>
-
-<blockquote class="mycode2"><tt>
-python 2cr/msmarco --collection v1-passage --all --display-commands --dry-run
-</tt></blockquote>
-
-<p>To actually run all the experimental conditions:</p>
-
-<blockquote class="mycode2"><tt>
-python 2cr/msmarco.py --collection v1-passage --all --display-commands
-</tt></blockquote>
-
-<p>With the above command, run files will be placed in the current directory.
-Use the option <tt>--directory runs/</tt> to place the runs in a sub-directory.</p>
-
-<p>To show the commands for a specific condition:</p>
-
-<blockquote class="mycode2"><tt>
-python 2cr/msmarco.py --collection v1-passage --condition bm25-default --display-commands --dry-run
-</tt></blockquote>
-
-<p>This will generate exactly the commands for a specific condition above (corresponding to a row in the table).</p>
-
-<p>To actually run a specific condition:</p>
-
-<blockquote class="mycode2"><tt>
-python 2cr/msmarco.py --collection v1-passage --condition bm25-default --display-commands
-</tt></blockquote>
-
-<p>Again, with the above command, run files will be placed in the current directory.
-Use the option <tt>--directory runs/</tt> to place the runs in a sub-directory.</p>
-
-<p>Finally, to generate this page:</p>
-
-<blockquote class="mycode2"><tt>
-python 2cr/msmarco.py --collection v1-passage --generate-report --output msmarco-v1-passage.html
-</tt></blockquote>
-
-<p>The output file <tt>msmarco-v1-passage.html</tt> should be identical to this page.</p>
 
 <div style="padding-top: 50px"/>
 
