--- a/src/main/resources/regression/dl22-doc-d2q-t5.yaml
+++ b/src/main/resources/regression/dl22-doc-d2q-t5.yaml
@@ -1,16 +1,16 @@
 ---
-corpus: msmarco-v2-doc-segmented
-corpus_path: collections/msmarco/msmarco_v2_doc_segmented/
+corpus: msmarco-v2-doc-d2q-t5
+corpus_path: collections/msmarco/msmarco_v2_doc_d2q-t5/
 
-index_path: indexes/lucene-index.msmarco-v2-doc-segmented/
+index_path: indexes/lucene-index.msmarco-v2-doc-d2q-t5/
 collection_class: MsMarcoV2DocCollection
 generator_class: DefaultLuceneDocumentGenerator
 index_threads: 24
 index_options: -storeRaw
 index_stats:
-  documents: 124131414
-  documents (non-empty): 124131414
-  total terms: 24780918039
+  documents: 11959635
+  documents (non-empty): 11959635
+  total terms: 19760783236
 
 metrics:
   - metric: MAP@100
@@ -51,51 +51,51 @@ metrics:
 
 topic_reader: TsvInt
 topics:
-  - name: "[DL23 (Doc)](https://microsoft.github.io/msmarco/TREC-Deep-Learning)"
-    id: dl23
-    path: topics.dl23.txt
-    qrel: qrels.dl23-doc.txt
+  - name: "[DL22 (Doc)](https://microsoft.github.io/msmarco/TREC-Deep-Learning)"
+    id: dl22
+    path: topics.dl22.txt
+    qrel: qrels.dl22-doc.txt
 
 models:
   - name: bm25-default
     display: BM25 (default)
-    params: -bm25 -hits 10000 -selectMaxPassage -selectMaxPassage.delimiter "#" -selectMaxPassage.hits 1000
+    params: -hits 1000 -bm25
     results:
       MAP@100:
-        - 0.1341
+        - 0.2387
       MRR@100:
-        - 0.6477
+        - 0.8866
       nDCG@10:
-        - 0.3405
+        - 0.5792
       R@100:
-        - 0.2884
+        - 0.3443
       R@1000:
-        - 0.5662
+        - 0.7066
   - name: bm25-default+rm3
     display: +RM3
-    params: -bm25 -rm3 -collection MsMarcoV2DocCollection -hits 10000 -selectMaxPassage -selectMaxPassage.delimiter "#" -selectMaxPassage.hits 1000
+    params: -hits 1000 -bm25 -rm3 -collection MsMarcoV2DocCollection
     results:
       MAP@100:
-        - 0.1652
+        - 0.2611
       MRR@100:
-        - 0.6467
+        - 0.8255
       nDCG@10:
-        - 0.3452
+        - 0.5375
       R@100:
-        - 0.3129
+        - 0.3580
       R@1000:
-        - 0.5755
+        - 0.7574
   - name: bm25-default+rocchio
     display: +Rocchio
-    params: -bm25 -rocchio -collection MsMarcoV2DocCollection -hits 10000 -selectMaxPassage -selectMaxPassage.delimiter "#" -selectMaxPassage.hits 1000
+    params: -hits 1000 -bm25 -rocchio -collection MsMarcoV2DocCollection
     results:
       MAP@100:
-        - 0.1658
+        - 0.2610
       MRR@100:
-        - 0.6284
+        - 0.8459
       nDCG@10:
-        - 0.3451
+        - 0.5509
       R@100:
-        - 0.3220
+        - 0.3616
       R@1000:
-        - 0.5834
+        - 0.7583
